--- a/app/secure_page.html
+++ b/app/secure_page.html
@@ -3,6 +3,9 @@
 {% block main %}
 <h1> Secure Page</h1>
 <p>Top class security is our highest priority.
-    A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic 
+    <br>
+    Website security can be a complex (or even confusing) topic in an ever-evolving landscape. This guide is meant to provide a clear framework for website owners seeking to mitigate risk and apply security principles to their web properties.
+Before we get started, it’s important to keep in mind that security is never a set-it-and-forge-it solution. Instead, we encourage you to think of it as a continuous process that requires constant assessment to reduce the overall risk.
+By applying a systematic approach to website security, we can think of it as an onion, with many layers of defense all coming together to form one piece. We need to view website security holistically and approach it with a defense in depth strategy. 
 </p>
 {% endblock %}
